# StringArtRobot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  machine_instructions.md  requirements.txt
.github/: dependabot.yml
3d/StringBotV1/: v1.f3d
Algorithm/: test.lines  visualizer.py
generator/: debug.stringart  horse.stringart  instructions.py  main.py
robot/: main.cpp  main.py  robot.cpp  robot.h  run.py
robot/controls/: controls.h  rotation.cpp  rotation.h
robot/instruction_interpreter/: instructions.py
robot/instructions/: Beep.cpp  Beep.h  PlaceNail.cpp  PlaceNail.h  Rotate.cpp  Rotate.h  Sleep.cpp  Sleep.h  instructions.h
robot/robot/: instructions.py  string_bot.py  tmp_ui_test.py  ui.py
robot/robot/hardware_api/: __init__.py  beep.py  config.py  display.py  exceptions.py  rotate_servo.py  rotate_stepper.py  write_pin.py
robot/stringart_files/: horse.stringart  pig.stringart
robot/utils/: string_utils.cpp  string_utils.h
robot/web_interface/: web.py
robot/web_interface/web/static/: main.css
robot/web_interface/web/templates/upload/: upload_file.html
